# octo-spoon

./: .gitignore  LICENSE  README.md  check.py  main.py  pyproject-nv.toml  pyproject.toml  requirements.txt  run.json  run_octodiff.json  test.py  train.sh
docs/: train.md
octo_model/: __init__.py  config.py  inference.py  model.py
octo_model/train/: __init__.py  config-keep-wikitext-7900.json  config-tinystory-7900.json  data.py  train.py  utils.py
octodiff/: __init__.py  config.py  inference.py  model.py
octodiff/train/: __init__.py  checkpointing.py  config-tinystory-resume.json  config-tinystory.json  configuration.py  data.py  logging_utils.py  train.py  utils.py
scripts/: boolq_bench.py  dataset_cache_fix.py  hellaswag_bench.py  mmlu_bench.py  mmlu_pro_bench.py  pseudo_pll.py  svamp_bench.py  winogrande_bench.py
train/: checkpointing.py  config-keep-wikitext-7900.json  config.json  configuration.py  data.py  logging_utils.py  memory.py  train.py
